--- a/src/frontend/html/css/admin.css
+++ b/src/frontend/html/css/admin.css
@@ -123,8 +123,7 @@
   margin: 0 auto;
   padding: 0 20px;
 }
-
-/* Center buttons */
+/* Center */
 .topbar .container {
   display: flex;
   justify-content: center;
@@ -136,6 +135,29 @@
   flex-grow: 1;
   list-style: none;
 }
+
+.topbar-center ul {
+  margin: 0 15px;
+  padding: 0;
+  display: flex;
+}
+
+.topbar-center ul li a {
+  color: #fff;
+  font-size: 18px;
+}
+
+.sw {
+  color: #000;
+  font-size: 18px;
+}
+
+.topbar-center ul li a:hover {
+  color: #ccc;
+  text-decoration: none;
+}
+
+/* Center buttons */
 
 .topbar-center ul {
   margin: 0 15px;
@@ -232,3 +254,51 @@ hr {
 .group-content.open {
   display: block;
 }
+
+/* Modal page */
+.modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 6px;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4);
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            position: relative;
+        }
+
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .modal-backdrop {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 0;
+            pointer-events: none;
