--- a/src/frontend/html/css/webform.css
+++ b/src/frontend/html/css/webform.css
@@ -148,3 +148,14 @@ label.required::after {
 body {
   padding: 20px;
 }
+
+.error .input-field {
+  border-color: red;
+}
+
+.error-label {
+  display: block;
+  color: red;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
