--- a/src/frontend/html/css/admin.css
+++ b/src/frontend/html/css/admin.css
@@ -11,7 +11,7 @@
   top: 0;
   padding: 6px 14px;
   left: 0;
-  width: 80px;
+  width: 70px;
   height: 100%;
   background-color: #202020;
   transition: 0.5s;
@@ -59,16 +59,16 @@
 }
 
 .sidebar .list {
-  margin-top: 10px;
+  margin-top: 8px;
 }
 
 .list .list-item {
   list-style: none;
   width: 100%;
-  height: 50px;
+  height: 40px;
   background: transparent;
   margin: 5px 0;
-  line-height: 50px;
+  line-height: 40px;
   border-radius: 6px;
 }
 
@@ -83,10 +83,10 @@
 }
 
 .list .list-item a img {
-  min-width: 50px;
-  height: 50px;
+  min-width: 40px;
+  height: 40px;
   text-align: center;
-  line-height: 50px;
+  line-height: 40px;
   border-radius: 6px;
 }
 
@@ -101,6 +101,10 @@
   transition-delay: calc(0.1s * var(--i));
 }
 
+.sidebar.active .list-bottom {
+  bottom: 0;
+}
+
 .list .list-item.active a,
 .list .list-item a:hover {
   background: rgba(255, 255, 255, 0.2);
@@ -109,20 +113,21 @@
 
 /* Topbar */
 .topbar {
-  background-color: #efefef;
+  background-color: #f5f5f5;
   border-bottom: 1px solid #ccc;
   color: #fff;
-  padding: 15px 0;
+  padding: 15px 5px;
 }
 
 .topbar .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 0 20px;
 }
+
 /* Center */
 .topbar .container {
   display: flex;
@@ -134,57 +139,52 @@
   justify-content: center;
   flex-grow: 1;
   list-style: none;
-}
-
-.topbar-center ul {
-  margin: 0 15px;
-  padding: 0;
-  display: flex;
-}
-
-.topbar-center ul li a {
-  color: #fff;
-  font-size: 18px;
-}
-
-.sw {
-  color: #000;
-  font-size: 18px;
-}
-
-.topbar-center ul li a:hover {
-  color: #ccc;
-  text-decoration: none;
+  margin-left: 40px;
 }
 
 /* Center buttons */
-
 .topbar-center ul {
   margin: 0 15px;
   padding: 0;
   display: flex;
 }
 
-.topbar-center ul li a {
-  color: #fff;
-  font-size: 18px;
+.menu-item {
+  margin-left: 10px;
+  transition: border-bottom-color 10s ease;
+}
+
+.menu-item .selected {
+  border-bottom: 2px solid #ffff00;
+}
+
+.topbar-center a:hover {
+  color: #919191;
+  text-decoration: none;
 }
 
 .sw {
   color: #000;
   font-size: 18px;
-}
-
-.topbar-center ul li a:hover {
-  color: #ccc;
   text-decoration: none;
 }
+
 .topbar-right {
   margin-left: auto;
+  z-index: 1;
 }
-.topbar-right img {
-  width: 18px;
+
+.topbar-right a img {
+  width: 22px;
+  margin-left: 5px;
   height: auto;
+}
+
+#toggleRightSidebar {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: black;
 }
 
 /* List candidates/interns in DB */
@@ -192,16 +192,16 @@
   display: flex;
   flex-direction: column;
   background-color: #efefef;
-  border: 1px solid #ccc;
+  border: 1px solid #dfdfdf;
   border-radius: 6px;
   margin: 20px;
-  margin-left: 100px;
+  margin-left: 90px;
   border-collapse: collapse;
   font-size: 14px;
 }
 
 #view-db-list div {
-  padding: 10px;
+  padding: 4px;
 }
 
 hr {
@@ -215,7 +215,7 @@ hr {
 .group-title {
   background-color: #f4f4f4;
   border-radius: 3px;
-  padding: 10px;
+  padding: 4px;
   cursor: pointer;
 }
 
@@ -236,7 +236,39 @@ hr {
 }
 
 .person {
-  margin-bottom: 5px;
+  background-color: #f4f4f4;
+  border-radius: 6px;
+}
+
+.btnimg {
+  opacity: 0.5;
+  transform: translate(-50%, -50%);
+  transition: transform 1s ease;
+  animation: rotate 1s linear infinite;
+  animation-play-state: paused;
+}
+
+#btnRefresh {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+@keyframes rotate {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
+.btnimg.rotating {
+  animation-play-state: running;
+}
+
+.row-white {
+  background-color: white;
 }
 
 .group {
@@ -257,48 +289,278 @@ hr {
 
 /* Modal page */
 .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            border-radius: 6px;
-            overflow: auto;
-            background-color: rgba(0, 0, 0, 0.4);
-        }
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
 
-        .modal-content {
-            background-color: #fefefe;
-            margin: 15% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
-            position: relative;
-        }
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  max-width: fit-content;
+  max-height: fit-content;
+  border: 1px solid #999;
+  border-radius: 6px;
+  position: relative;
+}
 
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-            cursor: pointer;
-        }
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
 
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
 
-        .modal-backdrop {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            z-index: 0;
-            pointer-events: none;
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 0;
+  pointer-events: none;
+}
+
+/* Table */
+:root {
+  --base-spacing-unit: 24px;
+  --half-spacing-unit: --base-spacing-unit / 2;
+
+  --color-alpha: #1772ff;
+  --color-form-highlight: #ffffff;
+}
+
+.header-table-id,
+.table-data-id {
+  max-width: 30px;
+}
+
+.table {
+  width: 100%;
+  border: 1px solid --color-form-highlight;
+  border-radius: 6px;
+}
+
+.table-header {
+  display: flex;
+  width: 100%;
+  background: #202020;
+  padding: (--half-spacing-unit * 1.5) 0;
+  border-top-right-radius: 6px;
+  border-top-left-radius: 6px;
+}
+
+.table-row {
+  display: flex;
+  width: 100%;
+  padding: (--half-spacing-unit * 1.5) 0;
+
+  &:nth-of-type(odd) {
+    background: --color-form-highlight;
+  }
+}
+
+.table-data,
+.header__item {
+  flex: 1 1 20%;
+  text-align: center;
+}
+
+.header__item {
+  text-transform: uppercase;
+}
+
+.filter__link {
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  padding-left: --base-spacing-unit;
+  padding-right: --base-spacing-unit;
+
+  &::after {
+    content: "";
+    position: absolute;
+    right: -(--half-spacing-unit * 1.5);
+    color: white;
+    font-size: --half-spacing-unit;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  &.desc::after {
+    content: "(desc)";
+  }
+
+  &.asc::after {
+    content: "(asc)";
+  }
+}
+
+/* Right sidebar */
+.sidebar-right {
+  position: fixed;
+  top: 0;
+  right: -300px;
+  width: 300px;
+  height: 100%;
+  background-color: #ffffff;
+  padding: 20px;
+  box-sizing: border-box;
+  transition: right 0.3s ease-in-out;
+  z-index: 3;
+}
+
+.sidebar-right.show {
+  right: 0;
+  border-left: 1px solid #bbb;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  z-index: 2;
+}
+
+.overlay.show {
+  display: block;
+}
+
+/* Right buttons */
+.user-info {
+  margin-bottom: 20px;
+}
+
+.user-info h2 {
+  margin-top: 0;
+}
+
+.user-info p {
+  margin-bottom: 0;
+}
+
+.user-actions {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+#change-password {
+  padding: 8px 15px;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
+
+#change-password:focus,
+#change-password:hover {
+  padding: 8px 15px;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  color: #3939f9;
+  cursor: pointer;
+}
+
+#exit-account {
+  padding: 8px 15px;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  color: red;
+}
+#exit-account:hover,
+#exit-account:focus {
+  padding: 8px 15px;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  color: darkred;
+}
+
+/* Left buttons */
+.submitLeftBtn {
+  padding: 14px 40px;
+  margin-top: 12px;
+  border-radius: 3px;
+  box-shadow: 0px 0px 12px -2px rgba(0, 0, 0, 0.5);
+  line-height: 1.25;
+  background: #3939f9;
+  text-decoration: none;
+  user-select: none;
+  color: white;
+  font-size: 16px;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  position: relative;
+  transition: background-color 0.6s ease;
+  overflow: hidden;
+  &:after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    top: 50%;
+    left: 50%;
+    top: var(--mouse-y);
+    left: var(--mouse-x);
+    transform-style: flat;
+    transform: translate3d(-50%, -50%, 0);
+    background: rgba(white, 0.1);
+    border-radius: 100%;
+    transition:
+      width 0.3s ease,
+      height 0.3s ease;
+  }
+  &:focus,
+  &:hover {
+    background: darken(#3939f9, 10%);
+  }
+  &:active {
+    &:after {
+      width: 300px;
+      height: 300px;
+    }
+  }
+}
+
+h3 {
+  padding: 4px;
+  margin: 4px;
+}
+
+#html-code select {
+  width: 60%;
+  background: transparent;
+  width: 268px;
+  margin: 10px;
+  border-radius: 4px;
+  padding: 5px;
+  font-size: 16px;
+  border: 1px solid #bbb;
+  height: 34px;
+}
